--- a/templates/index_form.html
+++ b/templates/index_form.html
@@ -18,18 +18,17 @@
     <link rel="stylesheet" href="/res/css/style.css">
 
     <title>Login #2</title>
-</head>
-
-<body>
-    <title>Upload wanted person Info</title>
     <link rel="stylesheet" href="/res/css/toast.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="/res/js/jquery-3.3.1.min.js"></script>
+    <script src="/res/js/popper.min.js"></script>
+    <script src="/res/js/bootstrap.min.js"></script>
+    <script src="/res/js/main.js"></script>
     <script type="text/javascript" src="/res/js/util.js"></script>
     <script type="text/javascript">
-        $(document).ready(function(e) {
+        $(document).ready(function (e) {
             $("#formcheck").hide();
             getStats();
-            $('#upload').on('click', function() {
+            $('#upload').on('click', function () {
                 var form_data = new FormData();
                 var ins = document.getElementById('Upload image').files.length;
                 var personName = document.getElementById('person').value.trim();
@@ -47,16 +46,16 @@
                 }
 
                 $.ajax({
-                    url: 'python-flask-files-upload?upload image=' + uploadimage, // point to server-side URL
+                    url: 'python-flask-files-upload?upload image=' + upload image, // point to server-side URL
                     dataType: 'json', // what to expect back from server
                     cache: false,
                     contentType: false,
                     processData: false,
                     data: form_data,
                     type: 'post',
-                    success: function(response) { // display success response
+                    success: function (response) { // display success response
                         $('#msg').html('');
-                        $.each(response, function(key, data) {
+                        $.each(response, function (key, data) {
                             if (key !== 'message') {
                                 $('#msg').append(key + ' -> ' + data + '<br/>');
                             } else {
@@ -69,13 +68,13 @@
                         })
                         getStats();
                     },
-                    error: function(response) {
+                    error: function (response) {
                         $('#msg').html(response.message); // display error response
                         getStats();
                     }
                 });
             });
-            $('#train').on('click', function() {
+            $('#train').on('click', function () {
                 $.ajax({
                     url: 'train',
                     dataType: 'json',
@@ -97,7 +96,7 @@
             function showToast() {
                 var x = document.getElementById("snackbar");
                 x.className = "show";
-                setTimeout(function() {
+                setTimeout(function () {
                     x.className = x.className.replace("show", "checkk");
                 }, 3000);
 
@@ -132,81 +131,66 @@
             $('#upload_again').on('click', viewSetupUploadAgain);
         });
     </script>
-    </head>
+</head>
 
+
+<body>
+    <div class="hero_bg_box">
+        <div class="img-box">
+            <img src="/res/images/bg_1.jpg" alt="">
+        </div>
     </div>
-    <div id="formcheck">
-        <!-- <button id="train">Start training</button> -->
-        <br />
-        <p id="stats"></p>
-        </p>
-        </dl>
-</body>
 
 
+    <div class="contents order-1 order-md-2">
 
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-7">
 
+                    <h3><strong>Upload Wanting Person info:</strong></h3>
+                    <p class="mb-4">Hii this is a Face Recognition technology from which u can find any wanting person .
+                    </p>
 
+                    <body background="/res/home.jpeg">
+                        <p id="msg"></p>
+                        <div class="contents order-1order-md-7 ">
 
-
-
-<div class="hero_bg_box">
-    <div class="img-box">
-        <img src="/res/images/bg_1.jpg" alt="">
-    </div>
-</div>
-
-
-<div class="contents order-1 order-md-2">
-
-    <div class="container">
-        <div class="row align-items-center justify-content-center">
-            <div class="col-md-7">
-
-                <h3>Upload <strong>Wanting Person info:</strong></h3>
-                <p class="mb-4">Hii this is a Face Recognition technology from which u can find any wanting person .</p>
-
-                <body background="/res/home.jpeg">
-                    <p id="msg"></p>
-                    <div class="contents order-1order-md-7 ">
-
-                        <div class="container">
-                            <div class="row align-items-center justify-content-center">
-                                <div class="col-md-7">
-                                </div>
-
-
-                                <form action="#" method="post">
-                                    <div class="form-group first">
-                                        <label for="name of wanting person">Name of Wanting Person</label>
-                                        <input type="text" class="form-control" placeholder="Name " id="name">
+                            <div class="container">
+                                <div class="row align-items-center justify-content-center">
+                                    <div class="col-md-7">
                                     </div>
-                                    <div id="form1">
-                                        <input type="file" id="upload image" name="files[]" multiple="Upload images" />
-                                        <br />
-                                        <input type="text" id="person" name="person" placeholder="Reward if any" />
-                                        <br />
 
-                                        <div class="form-group last mb-3">
-                                            <button id="upload">Submit Info</button>
+
+                                    <form action="#" method="post">
+                                        <div class="form-group first">
+                                            <label for="name of wanting person">Name of Wanting Person</label>
+                                            <input type="text" class="form-control" placeholder="Name " id="name">
                                         </div>
+                                        <div id="form1">
+                                            <input type="file" id="upload image" name="files[]"
+                                                multiple="Upload images" />
+                                            <br />
+                                            <div id="snackbar">File Uploaded sucessfuly</div>
+
+                                            <input type="text" id="person" name="person" placeholder="Reward if any" />
+                                            <br />
+
+                                            <div class="form-group last mb-3">
+                                                <button id="upload">Submit Info</button>
+                                            </div>
 
 
-                                </form>
+                                    </form>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                </div>
 
 
             </div>
-
-
-
-            <script src="js/jquery-3.3.1.min.js"></script>
-            <script src="js/popper.min.js"></script>
-            <script src="js/bootstrap.min.js"></script>
-            <script src="js/main.js"></script>
-            </body>
+        </div>
+    </div> ̰
+</body>
 
 </html>
