--- a/templates/videoStream.html
+++ b/templates/videoStream.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Display Webcam Stream</title>
- 
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <style>
 #container {
 	margin: 0px auto;
@@ -20,13 +20,34 @@
 </head>
  
 <body>
-<div id="container">
-	<video autoplay="true" id="videoElement">
-	
-	</video>
-</div>
+	<button id="stopVideo">stop video</button>
+	<button id="startVideo">start video</button>
+	<div id="container">
+		<video autoplay="true" id="videoElement"></video>
+	</div>
 <script>
+	let streamVideo = null
+	$('#stopVideo').on('click', () => {
+		stopVideoOnly(streamVideo);
+	})
+	let video = document.querySelector('#videoElement');
+	// stop only camera
+	function stopVideoOnly(stream) {
+		stream.getTracks().forEach(function(track) {
+			if (track.readyState == 'live' && track.kind === 'video') {
+				track.stop();
+			}
+		});
+	}
 
+	if (navigator.mediaDevices.getUserMedia) {
+		navigator.mediaDevices.getUserMedia({ video: true })
+			.then((stream) => {
+				streamVideo = stream;
+				video.srcObject = stream;
+			})
+			.catch(console.error)
+	}
 </script>
 </body>
 </html>
