--- a/templates/index.html
+++ b/templates/index.html
@@ -79,16 +79,11 @@
                                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html"> About</a>
+                                    <a class="nav-link" href="/about"> About</a>
                                 </li>
+                              
                                 <li class="nav-item">
-                                    <a class="nav-link" href="service.html"> Services </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="guard.html"> Guards </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact us</a>
+                                    <a class="nav-link" href="/detect">Detect </a>
                                 </li>
                             </ul>
                         </div>
@@ -112,64 +107,18 @@
                         Our Responsibility
                       </span>
                                         </h1>
-                                        <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod magna aliqua. Ut enim ad minim veniam
+                                        <p> SpyEye - An Effective tracking solution that allow wanted person to be tracked around the country
                                         </p>
                                         <div class="btn-box">
-                                            <a href="/file-upload" class="btn-1">Register Wanted Report</a>
-                                            <a href="/index_form" class="btn-2">Detect Person</a>
+                                            <a href="/index_form" class="btn-1">Register Wanted Report</a>
+                                            <a href="/detect" class="btn-2">Detect Person</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item ">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-7">
-                                    <div class="detail-box">
-                                        <h1>
-                                            Your Saftey <br>
-                                            <span>
-                        Our Responsibility
-                      </span>
-                                        </h1>
-                                        <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod magna aliqua. Ut enim ad minim veniam
-                                        </p>
-                                        <div class="btn-box">
-                                            <a href="" class="btn-1"> Read more </a>
-                                            <a href="" class="btn-2">Get A Quote</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item ">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-7">
-                                    <div class="detail-box">
-                                        <h1>
-                                            Your Saftey <br>
-                                            <span>
-                        Our Responsibility
-                      </span>
-                                        </h1>
-                                        <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod magna aliqua. Ut enim ad minim veniam
-                                        </p>
-                                        <div class="btn-box">
-                                            <a href="" class="btn-1"> Read more </a>
-                                            <a href="" class="btn-2">Get A Quote</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                   
                 </div>
                 <div class="container idicator_container">
                     <ol class="carousel-indicators">
@@ -183,15 +132,14 @@
         <!-- end slider section -->
     </div>
 
-    <!-- about section
-
+   
   <section class="about_section layout_padding">
     <div class="container">
       <div class="row">
         <div class="col-md-6 px-0">
           <div class="img_container">
             <div class="img-box">
-              <img src="/res/images/about-img.jpg" alt="" />
+              <img src="/res/images/wanted_txt_img.webp" alt="" />
             </div>
           </div>
         </div>
@@ -203,17 +151,13 @@
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-              in reprehenderit in voluptate velit
+            We provide solution to detect wanted person via Face Recognition in less time
             </p>
-            <div class="btn-box">
+            <!-- <div class="btn-box">
               <a href="">
                 Read More
               </a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -508,7 +452,7 @@
 
     <!-- contact section -->
 
-    <!-- <section class="contact_section layout_padding">
+     <!-- <section class="contact_section layout_padding">
     <div class="contact_bg_box">
       <div class="img-box">
         <img src="/res/images/contact-bg.jpg" alt="">
@@ -520,37 +464,31 @@
           Get In touch
         </h2>
       </div>
-      <div class="">
-        <div class="row">
-          <div class="col-md-7 mx-auto">
-            <form action="#">
-              <div class="contact_form-container">
-                <div>
-                  <div>
-                    <input type="text" placeholder="Full Name" />
-                  </div>
-                  <div>
-                    <input type="email" placeholder="Email " />
-                  </div>
-                  <div>
-                    <input type="text" placeholder="Phone Number" />
-                  </div>
-                  <div class="">
-                    <input type="text" placeholder="Message" class="message_input" />
-                  </div>
-                  <div class="btn-box ">
-                    <button type="submit">
-                      Send
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </form>
+       <div class="container-fluid row">
+          <div class="contact_link-container">
+            <a href="" class="contact_link1">
+              <i class="fa fa-map-marker" aria-hidden="true"></i>
+              <span>
+                Lorem ipsum dolor sit amet,
+              </span>
+            </a>
+            <a href="" class="contact_link2">
+              <i class="fa fa-phone" aria-hidden="true"></i>
+              <span>
+                Call : +01 1234567890
+              </span>
+            </a>
+            <a href="" class="contact_link3">
+              <i class="fa fa-envelope" aria-hidden="true"></i>
+              <span>
+                demo@gmail.com
+              </span>
+            </a>
           </div>
         </div>
-      </div>
+      
     </div>
-  </section> -->
+  </section>  -->
 
     <!-- end contact section -->
 
@@ -620,7 +558,7 @@
         </a>
       </div>
     </div>
-  </section> -->--> -->
+  </section> -->
 
     <!-- end team section -->
 
@@ -732,15 +670,7 @@
 
 
 
-    <!-- footer section -->
-    <footer class="container-fluid footer_section">
-        <p>
-            &copy; <span id="currentYear"></span> All Rights Reserved. Design by
-            <a href="https://html.design/">Free Html Templates</a>
-        </p>
-    </footer>
-    <!-- footer section -->
-
+    
     <script src="/res/js/jquery-3.4.1.min.js"></script>
     <script src="/res/js/bootstrap.js"></script>
     <script src="/res/js/custom.js"></script>
