--- a/templates/index_form.html
+++ b/templates/index_form.html
@@ -17,7 +17,7 @@
     <!-- Style -->
     <link rel="stylesheet" href="/res/css/style.css">
 
-    <title>Login #2</title>
+    <title>Report Wanted Person</title>
     <link rel="stylesheet" href="/res/css/toast.css">
     <script src="/res/js/jquery-3.3.1.min.js"></script>
     <script src="/res/js/popper.min.js"></script>
@@ -131,19 +131,19 @@
     <div style="width: 100%; ">
 
         <div
-            style="width: 50%; height: 800px; float: left; background-image: url('/res/images/light_bg.jpeg'); justify-items: center; align-items: center; margin:0 auto;">
+            style="width: 50%; height: 800px; float: left; background-color: rgb(239, 245, 245); justify-items: center; align-items: center; margin:0 auto;">
             <div class="half">
-                <div class="bg order-1 order-md-2" style="background-image: url('/res/images/light_bg.jpeg');">
+                <div class="bg order-1 order-md-2" style="background-color: rgb(239, 245, 245);">
                     <div class="contents order-1 order-md-2">
 
-                        <div class="container">
+                        <div class="container" style="margin: 20px;">
                             <div class="row align-items-center justify-content-center">
                                 <div class="col-md-7">
 
-                                    <h3><strong>Upload Wanting Person info:</strong></h3>
-                                    <p class="mb-4">Hii this is a Face Recognition technology from which u can find any
-                                        wanting
-                                        person .
+                                    <h3><strong>Upload Wanted Person Info:</strong></h3>
+                                    <p class="mb-4">Hii this is a Face Recognition technology from which you can find any
+                                        wanted
+                                        person.
                                     </p>
 
                                     <p id="msg"></p>
@@ -156,8 +156,8 @@
                                                 <div id="snackbar">File Uploaded sucessfuly</div>
                                                 <div id="form1">
                                                     <div class="form-group first">
-                                                        <label for="name of wanting person">Name of Wanting
-                                                            Person</label>
+                                                        <label for="name of wanted person">Name of Wanted
+                                                            Person*</label>
                                                         <input type="text" class="form-control " placeholder="Name "
                                                             id="person" name="person" />
                                                     </div>
@@ -167,15 +167,17 @@
                                                             multiple="multiple" />
                                                     </div>
                                                     <div class="form-group">
+                                                        <label for="name of wanted person">Rewards(If any)</label>
+                                                        <br/>
                                                         <input type="text" id="reward" name="reward"
-                                                            placeholder="Reward if any" />
+                                                            placeholder="Reward Amount" />
 
                                                     </div>
 
 
                                                     <div class="form-group last mb-3">
-                                                        <button id="upload" class="btn btn-block btn-primary">Submit
-                                                            Info</button>
+                                                        <button id="upload" class="btn btn-block btn-primary">Submit Report
+                                                    </button>
                                                     </div>
                                                 </div>
 
@@ -185,7 +187,7 @@
                                                 <button id="upload_again" class="btn btn-block btn-primary">Upload
                                                     Another
                                                     Person</button>
-                                                <button id="detect" class="btn btn-block btn-primary">Detect</button>
+                                                <button id="detect" class="btn btn-block btn-primary">Detect Registered Person</button>
 
                                             </div>
                                             <p id="stats"></p>
@@ -201,7 +203,7 @@
             </div>
         </div>
         <div
-            style="width: 50%; height: 800px; float: left; background-image: url('/res/images/bg_1.jpg'); justify-items: center; align-items: center; margin:0 auto;">
+            style="width: 50%; height: 800px; float: left; background-image: url('/res/images/header_wanted_person.jpeg'); justify-items: center; align-items: center; margin:0 auto;">
 
         </div>
     </div>
