--- a/templates/index.html
+++ b/templates/index.html
@@ -2,43 +2,44 @@
 <html>
 
 <head>
-    <!-- Basic -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Mobile Metas -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <!-- Site Metas -->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <link rel="shortcut icon" href="/res/images/favicon.png" type="image/x-icon">
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <link rel="shortcut icon" href="/res/images/favicon.png" type="image/x-icon">
 
-    <title>Guarder</title>
+  <title>Guarder</title>
 
-    <!-- bootstrap core css -->
-    <link rel="stylesheet" type="text/css" href="/res/css/bootstrap.css" />
+  <!-- bootstrap core css -->
+  <link rel="stylesheet" type="text/css" href="/res/css/bootstrap.css" />
 
-    <!-- fonts style -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
+  <!-- fonts style -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,600,700&display=swap"
+    rel="stylesheet" />
 
-    <!-- Custom styles for this template -->
-    <link href="/res/css/style.css" rel="stylesheet" />
-    <!-- responsive style -->
-    <link href="/res/css/responsive.css" rel="stylesheet" />
+  <!-- Custom styles for this template -->
+  <link href="/res/css/style.css" rel="stylesheet" />
+  <!-- responsive style -->
+  <link href="/res/css/responsive.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div class="hero_area">
-        <!-- header section strats -->
-        <div class="hero_bg_box">
-            <div class="img-box">
-                <img src="/res/images/hero-bg.jpg" alt="">
-            </div>
-        </div>
+  <div class="hero_area">
+    <!-- header section strats -->
+    <div class="hero_bg_box">
+      <div class="img-box">
+        <img src="/res/images/hero-bg.jpg" alt="">
+      </div>
+    </div>
 
-        <header class="header_section">
-            <div class="header_top">
-                <!-- <div class="container-fluid">
+    <header class="header_section">
+      <div class="header_top">
+        <!-- <div class="container-fluid">
           <div class="contact_link-container">
             <a href="" class="contact_link1">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -60,79 +61,82 @@
             </a>
           </div>
         </div> -->
-            </div>
-            <div class="header_bottom">
-                <div class="container-fluid">
-                    <nav class="navbar navbar-expand-lg custom_nav-container">
-                        <a class="navbar-brand" href="index.html">
-                            <span>
-                SpyEye- Wanted Person Tracking system
+      </div>
+      <div class="header_bottom">
+        <div class="container-fluid">
+          <nav class="navbar navbar-expand-lg custom_nav-container">
+            <a class="navbar-brand" href="index.html">
+              <span>
+                YOUR SAFTEY -
+                OUR RESPONSIBILITY
               </span>
-                        </a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""></span>
             </button>
 
-                        <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
-                            <ul class="navbar-nav  ">
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/about"> About</a>
-                                </li>
-                              
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/detect">Detect </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-            </div>
-        </header>
-        <!-- end header section -->
-        <!-- slider section -->
-        <section class=" slider_section ">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-7">
-                                    <div class="detail-box">
-                                        <h1>
-                                            Your Saftey <br>
-                                            <span>
-                        Our Responsibility
-                      </span>
-                                        </h1>
-                                        <p> SpyEye - An Effective tracking solution that allow wanted person to be tracked around the country
-                                        </p>
-                                        <div class="btn-box">
-                                            <a href="/index_form" class="btn-1">Register Wanted Report</a>
-                                            <a href="/detect" class="btn-2">Detect Person</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                   
-                </div>
-                <div class="container idicator_container">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                </div>
-            </div>
-        </section>
-        <!-- end slider section -->
-    </div>
+            <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
+              <ul class="navbar-nav  ">
+                <li class="nav-item active">
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href=""> About</a>
+                </li>
 
-   
+                <li class="nav-item">
+                  <a class="nav-link" href="/detect">Detect </a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <!-- end header section -->
+    <!-- slider section -->
+    <section class=" slider_section ">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-7">
+                  <div class="detail-box">
+                    <h1>
+                      SpY-EyE<br>
+                      <span>
+                        Wanted Person Tracking System
+                      </span>
+                    </h1>
+                    <p>An Effective & easy solution to find wanted person with 90% confidence score
+                    </p>
+                    <div class="btn-box">
+                      <a href="/index_form" class="btn-1">Register Wanted Report</a>
+                      <a href="/detect" class="btn-2">Detect Person</a>
+                      <a href="/detect" class="btn-1">Video Surveillance</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="container idicator_container">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+        </div>
+      </div>
+    </section>
+    <!-- end slider section -->
+  </div>
+
+
   <section class="about_section layout_padding">
     <div class="container">
       <div class="row">
@@ -147,12 +151,14 @@
           <div class="detail-box">
             <div class="heading_container ">
               <h2>
-                Who Are We?
+                About SpY-EyE
               </h2>
             </div>
-            <p>
-            We provide solution to detect wanted person via Face Recognition in less time
+            <p> 
+              Find wanted person using Face Recognition in this system
             </p>
+            <p> 
+              We are providing solution to detect wanted person in public areas, airports boarding point, etc using this technology. provide easy to detect person with 90% accuracy score.
             <!-- <div class="btn-box">
               <a href="">
                 Read More
@@ -166,9 +172,9 @@
 
   <!-- end about section -->
 
-    <!-- service section -->
+  <!-- service section -->
 
-    <!-- <section class="service_section layout_padding">
+  <!-- <section class="service_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -368,9 +374,9 @@
   <!-- end service section -->
 
 
-    <!-- client section -->
+  <!-- client section -->
 
-    <!-- <section class="client_section layout_padding">
+  <!-- <section class="client_section layout_padding">
     <div class="container ">
       <div class="heading_container heading_center">
         <h2>
@@ -448,11 +454,11 @@
     </div>
   </section> -->
 
-    <!-- end client section -->
+  <!-- end client section -->
 
-    <!-- contact section -->
+  <!-- contact section -->
 
-     <!-- <section class="contact_section layout_padding">
+  <!-- <section class="contact_section layout_padding">
     <div class="contact_bg_box">
       <div class="img-box">
         <img src="/res/images/contact-bg.jpg" alt="">
@@ -490,11 +496,11 @@
     </div>
   </section>  -->
 
-    <!-- end contact section -->
+  <!-- end contact section -->
 
-    <!-- team section -->
+  <!-- team section -->
 
-    <!-- <section class="team_section layout_padding">
+  <!-- <section class="team_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -560,10 +566,10 @@
     </div>
   </section> -->
 
-    <!-- end team section -->
+  <!-- end team section -->
 
-    <!-- info section -->
-    <!-- <section class="info_section ">
+  <!-- info section -->
+  <!-- <section class="info_section ">
     <div class="container">
       <div class="row">
         <div class="col-md-3">
@@ -665,15 +671,15 @@
     </div>
   </section> -->
 
-    <!-- end info_section -->
+  <!-- end info_section -->
 
 
 
 
-    
-    <script src="/res/js/jquery-3.4.1.min.js"></script>
-    <script src="/res/js/bootstrap.js"></script>
-    <script src="/res/js/custom.js"></script>
+
+  <script src="/res/js/jquery-3.4.1.min.js"></script>
+  <script src="/res/js/bootstrap.js"></script>
+  <script src="/res/js/custom.js"></script>
 </body>
 
 </html>
