rename and video link

--- a/templates/index.html
+++ b/templates/index.html
@@ -113,9 +113,9 @@
                     <p>An Effective & easy solution to find wanted person with 90% confidence score
                     </p>
                     <div class="btn-box">
-                      <a href="/index_form" class="btn-1">Register Wanted Report</a>
+                      <a href="/training" class="btn-1">Register Wanted Report</a>
                       <a href="/detect" class="btn-2">Detect Person</a>
-                      <a href="/detect" class="btn-1">Video Surveillance</a>
+                      <a href="/video" class="btn-1">Video Surveillance</a>
                     </div>
                   </div>
                 </div>
